# git-overview

./: .gitignore  Changelog  README.md  git-overview.py  pyproject.toml  setup.py
man/: git-overview.1
src/: git-overview
